--- a/ToDoList/Views/Items/Index.cshtml
+++ b/ToDoList/Views/Items/Index.cshtml
@@ -1,33 +1,13 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>My To-Do List!</title>
-        <link 
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
-        rel="stylesheet" 
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" 
-        crossorigin="anonymous">
-    </head>
-    <body>
-        @using ToDoList.Models;
+@{
+    Layout = "_Layout";
+} @using ToDoList.Models;
 
-        @if (Model.Count == 0)
-        {
-            <p>There are no items in the list.</p>
-        }
-        <ul>
-            @foreach (Item item in Model)
-            {
-                @* <li>@item.Description</li> *@
-                <li><a href='/items/@item.Id'>@item.Description</a></li>
-            }
-        </ul>
-        <form action="/items/delete" method="post">
-            <button type="submit" name="button">Clear All Items</button>
-        </form>
-        <br>
-        <br>
-        <a href="/items/new">Add a new item.</a>
-    </body>
-</html>
+<h1>Items</h1>
+
+@if (@Model.Count == 0)
+{
+    <h3>No items have been added yet!</h3>
+} @foreach (Item item in Model)
+{
+    <li>@item.Description</li>
+} 
